# pronunciation-dictionary

./: .flake8  .gitignore  CHANGELOG.md  CITATION.cff  Pipfile  README.md  deploy-PyPI.sh  deploy-freeze.sh  deploy.sh  pylintrc  pyproject.new.toml  pyproject.toml  setup.cfg
src/pronunciation_dict_creation/: app.py  cli.py  common.py  downloading.py  formatting.old.py  from_lookup_dict.py  merging.py  pronunciations_remove_symbols.py  remove_duplicate_pronunciations.py  validation.py  word2pronunciation.py  words_remove_symbols.py
src/pronunciation_dictionary/: __init__.py  api.py  argparse_helper.py  cli.py  common.py  deserialization.py  formatting.old.py  formatting_adjustment.py  globals.py  io.py  logging.py  merging.py  mp_options.py  phoneme_set_extraction.py  pronunciation_selection.py  pronunciations_remove_symbols.py  serialization.py  single_pronunciation_selection.py  subset_extraction.py  types.py  validation.py  vocabular_extraction.py  vocabulary_extraction.py  words_casing_adjustment.py  words_remove_symbols.py
src/pronunciation_dictionary_cli/: argparse_helper.py  cli.py  formatting_adjustment.py  globals.py  io.py  merging.py  phoneme_set_extraction.py  pronunciations_remove_symbols.py  single_pronunciation_selection.py  subset_extraction.py  vocabular_extraction.py  vocabulary_extraction.py  words_casing_adjustment.py  words_remove_symbols.py
src/pronunciation_dictionary_tests/: test_api.py
src/pronunciation_dictionary_tests/test_pronunciation_selection_py/: test_get_first_pronunciation.py  test_get_last_pronunciation.py  test_get_longest_pronunciation.py  test_get_pronunciation_with_highest_weight.py  test_get_pronunciation_with_lowest_weight.py  test_get_random_pronunciation.py  test_get_shortest_pronunciation.py  test_get_weighted_pronunciation.py
src/pronunciation_dictionary_tests/test_serialization_py/: test_get_line_for_pronunciation.py  test_get_pronunciation_serialized.py  test_get_weight_serialized.py  test_get_word_serialized.py  test_serialize.py
src/pronunciation_dictionary_tests/test_validation_py/: test_validate_dictionary.py  test_validate_pronunciation.py  test_validate_weight.py  test_validate_word.py
