[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "pronunciation-dictionary"
version = "0.0.4"
description = "Library to load and save pronunciation dictionaries (any language)."
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
  {email = "stefan.taubert@posteo.me"},
  {name = "Stefan Taubert"}
]
maintainers = [
  {email = "stefan.taubert@posteo.me"},
  {name = "Stefan Taubert"}
]
keywords = [
  "ARPAbet",
  "IPA",
  "X-SAMPA",
  "CMU",
  "TTS",
  "Text-to-speech",
  "Speech synthesis",
  "Language",
  "Linguistics"  
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Operating System :: OS Independent",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: BSD",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/stefantaubert/pronunciation-dictionary"
Issues = "https://github.com/stefantaubert/pronunciation-dictionary/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "pronunciation_dictionary",
]
exclude = [
  "pronunciation_dictionary_tests",
  "pronunciation_dictionary_debug"
]
namespaces = true

[tool.pytest.ini_options]
log_cli = true
log_level = "DEBUG"
testpaths = [
  "src/pronunciation_dictionary_tests",
]

[tool.autopep8]
indent-size = 2
ignore = ["E121"]
max_line_length = 100

[tool.isort]
line_length = 100
indent = 2
known_first_party = [
  "pronunciation_dictionary",
]
known_third_party = []
