[metadata]
name = iterable_serialization
version = 1.0.0
author="Stefan Taubert"
author_email="stefan.taubert@posteo.de"
description=""
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stefantaubert/pronunciation-dict-creation.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =

[options.packages.find]
where = src
