[metadata]
name = pronunciation-dictionary
version = 1.0.0
author="Stefan Taubert"
author_email="stefan.taubert@posteo.de"
description=""
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stefantaubert/pronunciation-dictionary.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    tqdm
    ordered-set

[options.packages.find]
where = src

